wrapped breadcrumbs contents to avoid safari flex height issue

--- a/ui/src/components/common/Breadcrumbs.scss
+++ b/ui/src/components/common/Breadcrumbs.scss
@@ -4,14 +4,17 @@
 .Breadcrumbs {
   z-index: 1;
   padding: $aleph-grid-size/2 $aleph-content-padding;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
   background-color: $aleph-breadcrumbs-background;
-  min-height: $aleph-grid-size*4.3;
 
   @media screen and (max-width: $aleph-screen-sm-max-width) {
     @include rtlSupportInvertedProp(padding, left, $aleph-mobile-content-padding, $aleph-mobile-content-padding);
+  }
+
+  &__inner-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
   }
 
   &__main, &__right {
