--- a/ui/src/screens/SearchScreen/SearchScreen.scss
+++ b/ui/src/screens/SearchScreen/SearchScreen.scss
@@ -36,7 +36,6 @@
     flex-flow: row-reverse nowrap;
     justify-content: space-between;
     margin-bottom: $aleph-grid-size;
-    min-height: $aleph-grid-size*3.5;
 
     &__button {
       .bp3-button {
